[project]
name = "esp-control"
version = "0.1.0"
description = "Remote control for pc using ESP32"
authors = [
    {name = "bengabp",email = "bengabdev4@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adafruit-ampy (>=1.1.0,<2.0.0)",
    "micropython-esp32-stubs (>=1.24.1.post1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
